# django-shtrove

./: .gitignore  Makefile  README.md  _OSF_INDEXING_CURRENT_STATE.md  poetry.toml  pyproject.toml  setup.cfg
src/django_shtrove/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
src/django_shtrove/digestive_tract/: __init__.py
src/django_shtrove/indexing/: __init__.py
src/django_shtrove/indexing/strategies/: __init__.py
src/django_shtrove/management/commands/: __init__.py
